--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <meta name="viewpoint" content="width=device-width, initial-scale.0">
     <title>Responsive Personal Portfolio Website Design | Codehal</title>
 
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
+
+        <i class='bx bx-menu' id="menu-icon"></i>
 
         <nav class="navbar">
             <a href="#Home">Home</a>
@@ -22,6 +27,29 @@
             <a href="#Contact">Contact</a>
         </nav>
     </header>
+
+    <section class="home" id="home">
+        <div class="home-content">
+            <h3>Hello, It's Me</h3>
+            <h1>Yohan Roshitha</h1>
+            <h3>And I'm a <span>Frontend Developer</span></h3>
+            <p>Users see and engage with on a website or web application. This role focuses on developing the "front end," or client side, of web projects, which involves creating a seamless user experience through design and functionality.</p>
+
+            <div class="social-media">
+                <a href="#"><i class='bx bxl-facebook-square'></i></a>
+                <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+                <a href="#"><i class='bx bxl-linkedin'></i></a>
+                <a href="#"><i class='bx bxl-github'></i></a>
+            </div>
+            <a href="#" class="btn">Download CV</a>
+
+        </div>
+
+        <div class="home-img">
+            <img src="image/image1.jpg" alt="">
+        </div>
+    </section>
+
 </body>
 
 </html>
